Actualización de Portafolio CSS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="CSS/estilos.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Getya</h1>
@@ -47,8 +46,15 @@
     <h1>Diagrama de Gantt</h1>
     <img src="img/diagrama-gantt.png" alt="Diagrama de Gantt del proyecto Getya" class="gantt-image">
 
-    
 
+    <footer class="footer">
+        <p>© 2025 Getya. Todos los derechos reservados.</p>
+        <div class="social-icons">
+            <i class="fab fa-github"></i>
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-twitter"></i>
+        </div>
+    </footer>
 </body>
 
 </html>
