actualizacion de html

--- a/index.html
+++ b/index.html
@@ -4,31 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="CSS/estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
+    <i class="fab fa-github"></i>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <h1>Getya</h1>
-    <h2>La logística y el seguimiento de envíos son fundamentales para 
+    <p>La logística y el seguimiento de envíos son fundamentales para 
         la satisfacción del cliente y la competitividad de las empresas.
         Es por eso que hemos diseñado una aplicación móvil de rastreo 
         y envíos que revoluciona la forma en que se gestionan los envíos 
-        y se proporciona una experiencia de usuario excepcional.</h2>
+        y se proporciona una experiencia de usuario excepcional.</p>
 
     <h1>Pregunta problema</h1>
-    <h2>¿Cómo optimizar el tiempo y calidad de los productos o la 
+    <p>¿Cómo optimizar el tiempo y calidad de los productos o la 
         pérdida de estos a través de una aplicación de rastreo en 
-        tiempo real? </h2>
+        tiempo real? </p>
 
     <H1>Justificación</H1>
-    <h2>Minimizar los retrasos, daños y/o inconvenientes del envío
+    <p>Minimizar los retrasos, daños y/o inconvenientes del envío
          por medio de la localización en tiempo real satelitalmente
-          del producto en cuestión</h2>
+          del producto en cuestión</p>
     
     <h1>Objetivo General</h1>
-    <h2>Desarrollar un sistema preciso de rastreo en tiempo real satelitalmente
+    <p>Desarrollar un sistema preciso de rastreo en tiempo real satelitalmente
          garantizando la visibilidad completa del proceso logístico, desde el 
          origen hasta el final, con el fin de satisfacer las necesidades y tiempos
-          del cliente inicial y final. </h2>
+          del cliente inicial y final. </p>
 
           
     <h1>Objetivos Especifícos</h1>
