cambio para ver imagen gantt

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/-OQIJThpId4?si=mHqHKCc4-6zWItU2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <h1>Diagrama de Gantt</h1>
-    <img src="img/diagrama-gantt.png" alt="Diagrama de Gantt del proyecto Getya" class="gantt-image">
+    <img src="img/diagrama_gantt.png" alt="Diagrama de Gantt del proyecto Getya" class="gantt-image">
 
 
     <footer class="footer">
